# FastAPI-TODO-list

./: .env  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: todo.py
app/core/: config.py
app/crud/: __init__.py  base.py  depends.py  todo.py
app/db/: __init__.py  base.py
app/db/models/: __init__.py  todo.py
app/models/: __init__.py  todo.py
app/schemas/: __init__.py  todo.py
environment/: Dockerfile
migrations/: env.py
migrations/versions/: 44ee26cef7ba_created_todos_table.py
