[tool.poetry]
name = "fastapi_todo-list"
version = "0.1.0"
description = "TODO-list"
authors = ["Ivan <ivan.mjasoyedov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
