[tool.poetry]
name = "fastapi_todo-list"
version = "0.1.0"
description = "TODO-list"
authors = ["Ivan <ivan.mjasoyedov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
SQLAlchemy = "^1.3.24"
uvicorn = "^0.14.0"
databases = {extras = ["postgresql"], version = "^0.4.3"}
psycopg2-binary = "^2.9.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
mypy = "^0.910"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
